# CPPExamples

./: .gitignore
Application/sources/: main.cpp
BitonicSort/: BitonicSort.sln
BitonicSort/BitonicSort/: BitonicSort.vcxproj  main.cpp
ComparingFloatingPointNumbers/: CMakeLists.txt
ComparingFloatingPointNumbers/cmake/: gtest.cmake
ComparingFloatingPointNumbers/sources/: fp.h  fp_comparison.h  main.cpp
ComparingFloatingPointNumbers/test/: CMakeLists.txt
ComparingFloatingPointNumbers/test/fp_comp/: CMakeLists.txt  fp_comp_test1.cpp  fp_comp_test2.cpp
ConvertString/: ConvertString.sln
ConvertString/ConvertString/: ConvertString.vcxproj  ConvertString.vcxproj.filters  main.cpp  unicode.cpp  unicode.h
ExpressionTemplate/sources/: expression.h  main.cpp  matrix.h  vector.h  vector2.h
HalfPrecisionFloatingPoint/sources/: fp_conversion.cpp  fp_conversion.h  main.cpp
Icu/: Icu.sln
Icu/Icu/: Icu.vcxproj  icu4c.props  main.cpp
LUDecomposition/sources/: crout.cpp  crout.h  doolittle.cpp  doolittle.h  main.cpp
Logger/: Logger.sln
Logger/Logger/: Logger.vcxproj  Logger.vcxproj.filters  console_log.cpp  console_log.h  file_log.cpp  file_log.h  log.h  logger.cpp  logger.h  logger2.cpp  logger2.h  main.cpp  rolling_file_log.cpp  rolling_file_log.h  singleton_logger.h
Logger2/: Logger2.sln
Logger2/Logger2/: Logger2.vcxproj  Logger2.vcxproj.filters  appender.h  console_appender.cpp  console_appender.h  file_appender.cpp  file_appender.h  logger.cpp  logger.h  main.cpp  rolling_file_appender.cpp  rolling_file_appender.h  singleton.h  singleton_logger.h
Math/sources/: block.h  main.cpp  matrix.h
NamelessAccess/: NamelessAccess.sln
NamelessAccess/NamelessAccess/: NamelessAccess.vcxproj  main.cpp
ParseFntFile/: ParseFntFile.sln
ParseFntFile/ParseFntFile/: ParseFntFile.vcxproj  ParseFntFile.vcxproj.filters  fnt.cpp  fnt.h  main.cpp
PimplIdiom/: PimplIdiom.sln
PimplIdiom/PimplIdiom/: PimplIdiom.vcxproj  PimplIdiom.vcxproj.filters  foo.cpp  foo.h  main.cpp
Range/: Range.sln
Range/Range/: Range.vcxproj  Range.vcxproj.filters  main.cpp  range.h
Rvo/: Rvo.sln
Rvo/Rvo/: Rvo.vcxproj  main.cpp
ServiceLocator/: ServiceLocator.sln
ServiceLocator/ServiceLocator/: ServiceLocator.vcxproj  ServiceLocator.vcxproj.filters  audio_service.h  console_log_service.cpp  console_log_service.h  file_log_service.cpp  file_log_service.h  log.txt  log_service.h  logger.cpp  logger.h  main.cpp  null_audio_service.h  service.h  service_locator.cpp  service_locator.h  unknown_service.h
ServiceLocator2/: ServiceLocator2.sln
ServiceLocator2/ServiceLocator2/: ServiceLocator2.vcxproj  ServiceLocator2.vcxproj.filters  audio_service.h  log_service.h  main.cpp  service.h  service_locator.h
Singleton/: Singleton.sln
Singleton2/: Singleton2.sln
Singleton2/Singleton2/: bar.h  (+6 more)
SpecificInterface/: SpecificInterface.sln
ThreadPool/: ThreadPool.sln
(+25 files in other folders)
